--- a/README
+++ b/README
@@ -1,4 +1,21 @@
+
+How To Download?
+
+1.Go to the main page
+2.Open the file "Link"
+3.Follow the link and download!
+
+
+How To Open?
+
+1.Download Unity (https://unity.com/download)
+2.Download Project (How To Download?)
+3.Unzip the zip archive
+4.Go to Unity Hub and click Open
+5.Select the folder with the project and wait for the project to load...
+
+Do you have any questions or bugs in the project? Write to the mail!
+Mail: gamb59504@gmail.com
+
 Game rights: DVloper
 did Decompiled: Cherepuhus (me)
-
-Link in file "Link"!
